[B]Version 1.1.134[/B]
- spankbang - domain changed to spankbang.party
- search menu - Copy keyword: creates a copy of a search term that can be edited
